--- a/_builder/templates/iterm2/candle.itermcolors.erb
+++ b/_builder/templates/iterm2/candle.itermcolors.erb
@@ -29,55 +29,55 @@
 		<key>Color Space</key>
 		<string>sRGB</string>
 		<key>Blue Component</key>
-		<real><%= @color[:dark_green][:srgb][2] %></real>
+		<real><%= @color[:green][:srgb][2] %></real>
 		<key>Green Component</key>
-		<real><%= @color[:dark_green][:srgb][1] %></real>
+		<real><%= @color[:green][:srgb][1] %></real>
 		<key>Red Component</key>
-		<real><%= @color[:dark_green][:srgb][0] %></real>
+		<real><%= @color[:green][:srgb][0] %></real>
 	</dict>
 	<key>Ansi 11 Color</key>
 	<dict>
 		<key>Color Space</key>
 		<string>sRGB</string>
 		<key>Blue Component</key>
-		<real><%= @color[:dark_yellow][:srgb][2] %></real>
+		<real><%= @color[:yellow][:srgb][2] %></real>
 		<key>Green Component</key>
-		<real><%= @color[:dark_yellow][:srgb][1] %></real>
+		<real><%= @color[:yellow][:srgb][1] %></real>
 		<key>Red Component</key>
-		<real><%= @color[:dark_yellow][:srgb][0] %></real>
+		<real><%= @color[:yellow][:srgb][0] %></real>
 	</dict>
 	<key>Ansi 12 Color</key>
 	<dict>
 		<key>Color Space</key>
 		<string>sRGB</string>
 		<key>Blue Component</key>
-		<real><%= @color[:dark_blue][:srgb][2] %></real>
+		<real><%= @color[:blue][:srgb][2] %></real>
 		<key>Green Component</key>
-		<real><%= @color[:dark_blue][:srgb][1] %></real>
+		<real><%= @color[:blue][:srgb][1] %></real>
 		<key>Red Component</key>
-		<real><%= @color[:dark_blue][:srgb][0] %></real>
+		<real><%= @color[:blue][:srgb][0] %></real>
 	</dict>
 	<key>Ansi 13 Color</key>
 	<dict>
 		<key>Color Space</key>
 		<string>sRGB</string>
 		<key>Blue Component</key>
-		<real><%= @color[:dark_purple][:srgb][2] %></real>
+		<real><%= @color[:purple][:srgb][2] %></real>
 		<key>Green Component</key>
-		<real><%= @color[:dark_purple][:srgb][1] %></real>
+		<real><%= @color[:purple][:srgb][1] %></real>
 		<key>Red Component</key>
-		<real><%= @color[:dark_purple][:srgb][0] %></real>
+		<real><%= @color[:purple][:srgb][0] %></real>
 	</dict>
 	<key>Ansi 14 Color</key>
 	<dict>
 		<key>Color Space</key>
 		<string>sRGB</string>
 		<key>Blue Component</key>
-		<real><%= @color[:dark_aqua][:srgb][2] %></real>
+		<real><%= @color[:aqua][:srgb][2] %></real>
 		<key>Green Component</key>
-		<real><%= @color[:dark_aqua][:srgb][1] %></real>
+		<real><%= @color[:aqua][:srgb][1] %></real>
 		<key>Red Component</key>
-		<real><%= @color[:dark_aqua][:srgb][0] %></real>
+		<real><%= @color[:aqua][:srgb][0] %></real>
 	</dict>
 	<key>Ansi 15 Color</key>
 	<dict>
@@ -172,11 +172,11 @@
 		<key>Color Space</key>
 		<string>sRGB</string>
 		<key>Blue Component</key>
-		<real><%= @color[:dark_red][:srgb][2] %></real>
+		<real><%= @color[:red][:srgb][2] %></real>
 		<key>Green Component</key>
-		<real><%= @color[:dark_red][:srgb][1] %></real>
+		<real><%= @color[:red][:srgb][1] %></real>
 		<key>Red Component</key>
-		<real><%= @color[:dark_red][:srgb][0] %></real>
+		<real><%= @color[:red][:srgb][0] %></real>
 	</dict>
 	<key>Background Color</key>
 	<dict>
