--- a/_builder/templates/terminal_app/candle.terminal.erb
+++ b/_builder/templates/terminal_app/candle.terminal.erb
@@ -16,23 +16,23 @@
 	</data>
 	<key>ANSIBrightBlueColor</key>
 	<data>
-	<%= @color[:dark_blue][:termapp] %>
+	<%= @color[:blue][:termapp] %>
 	</data>
 	<key>ANSIBrightCyanColor</key>
 	<data>
-	<%= @color[:dark_aqua][:termapp] %>
+	<%= @color[:aqua][:termapp] %>
 	</data>
 	<key>ANSIBrightGreenColor</key>
 	<data>
-	<%= @color[:dark_green][:termapp] %>
+	<%= @color[:green][:termapp] %>
 	</data>
 	<key>ANSIBrightMagentaColor</key>
 	<data>
-	<%= @color[:dark_purple][:termapp] %>
+	<%= @color[:purple][:termapp] %>
 	</data>
 	<key>ANSIBrightRedColor</key>
 	<data>
-	<%= @color[:dark_red][:termapp] %>
+	<%= @color[:red][:termapp] %>
 	</data>
 	<key>ANSIBrightWhiteColor</key>
 	<data>
@@ -40,7 +40,7 @@
 	</data>
 	<key>ANSIBrightYellowColor</key>
 	<data>
-	<%= @color[:dark_yellow][:termapp] %>
+	<%= @color[:yellow][:termapp] %>
 	</data>
 	<key>ANSICyanColor</key>
 	<data>
